# lanis-rs

./: .gitignore  Cargo.toml  README.md  env.sh  test_file.txt
.github/workflows/: rust.yml
examples/: create_account.rs  get_lessons.rs  lessons.rs  messages.rs
src/: lib.rs
src/base/: account.rs  auth.rs  mod.rs  schools.rs
src/modules/: calendar.rs  file_storage.rs  lessons.rs  messages.rs  mod.rs  timetable.rs
src/utils/: constants.rs  conversion.rs  crypt.rs  datetime.rs  mod.rs
