[package]
name = "lanis-rs"
version = "0.1.0"
authors = ["Rajala1404"]
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json", "cookies"] }
reqwest_cookie_store = "0.8.0"
tokio = {version = "1.40.0", features = ["rt-multi-thread", "macros"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
scraper = "0.20.0"
rsa = "0.10.0-pre.3"
rand = "0.8.5"
base64 = "0.22.1"
md-5 = "0.10.6"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
evpkdf = "0.2.0"
regex = "1.11.0"
markup5ever = "0.12.1"

[dev-dependencies]
stopwatch = "0.0.7"