[package]
name = "lanis-rs"
version = "0.1.0"
authors = ["Rajala1404"]
edition = "2021"
description = "A API for Lanis (Schulportal Hessen)"
keywords = ["lanis", "schulportal", "scraping", "sph"]

license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/lanis-mobile/lanis-rs"

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "cookies", "multipart", "stream", "gzip"] }
reqwest_cookie_store = "0.8.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"]}
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
scraper = "0.20.0"
rsa = "0.10.0-pre.3"
rand = "0.8.5"
base64 = "0.22.1"
md-5 = "0.10.6"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
evpkdf = "0.2.0"
regex = "1.11.1"
markup5ever = "0.12.1"
chrono = "0.4.39"
untis = { git = "https://github.com/luleyleo/untis-rs.git", rev = "2b3569b48d06dbf78657802f439a62a541c9c617" }

[dev-dependencies]
stopwatch-rs = "0.1.0"